# DjangoBlog

./: .gitignore  README.md  pyproject.toml
blog/: .env  settings.py  urls.py  utils.py
blog/static/login/styles/: login.css  register.css
blog/static/main/scripts/: easter_egg.js  profile.js
blog/static/main/styles/: easter_egg.css  find_users.css  index.css  photo_album.css  post.css  profile.css
blog/static/navbar/styles/: navbar.css
blog/static/settings/scripts/: settings.js
blog/static/settings/styles/: settings.css
blog/static/site/: site.js
locale/en/LC_MESSAGES/: django.po
posts/: urls.py  views.py
templates/authentication/: activate.html  activate_failed.html
templates/errors/: post_not_found.html  user_not_found.html
templates/login/: index.html  register.html
templates/main/: easter_egg.html  find_users.html  index.html  photo_album.html  post.html  profile.html
templates/partial_views/base_scripts/: base_scripts_partial.html
templates/partial_views/footer/: footer_partial.html
templates/partial_views/navbar/html/: navbar_for_logged_partial.html  navbar_partial.html
templates/settings/: settings.html
users/: admin.py  admin_forms.py  forms.py  helper.py  models.py  urls.py  views.py
users/fixtures/: file.json
users/management/commands/: check_email_verification.py  check_posts_for_today.py
users/migrations/: 0001_initial.py  0002_auto_20210530_1218.py  0003_custom_migration.py  0004_user_is_email_verified.py  0005_auto_20210531_2325.py  0006_remove_post_likes.py  0007_post_liked.py
